@@ -1,8 +1,8 @@
 buildscript {
     ext {
         // App version
-        versionName = '7.7.1'
-        versionCode = 109
+        versionName = '7.9.5'
+        versionCode = 123
 
         applicationId = "io.novafoundation.nova"
         releaseApplicationSuffix = "market"
@@ -51,7 +51,7 @@ buildscript {
 
         web3jVersion = '4.9.5'
 
-        fearlessLibVersion = '1.11.1'
+        substrateSdkVersion = '2.0.0'
 
         gifVersion = '1.2.19'
 
@@ -83,8 +83,10 @@ buildscript {
 
         markwonVersion = '4.6.2'
 
-        walletConnectCoreVersion = "1.13.0"
-        walletConnectWalletVersion = "1.6.0"
+        firebaseBomVersion = '32.7.1'
+
+        walletConnectCoreVersion = "1.27.2"
+        walletConnectWalletVersion = "1.20.2"
 
         withoutTransitiveAndroidX = {
             exclude group: "androidx.appcompat", module: "appcompat"
@@ -151,7 +153,7 @@ buildscript {
         zXingCoreDep = "com.google.zxing:core:$zXingVersion"
         zXingEmbeddedDep = "com.journeyapps:zxing-android-embedded:$zXingEmbeddedVersion"
 
-        fearlessLibDep = "io.github.nova-wallet:substrate-sdk-android:$fearlessLibVersion"
+        substrateSdkDep = "io.github.nova-wallet:substrate-sdk-android:$substrateSdkVersion"
 
         gifDep = "pl.droidsonroids.gif:android-gif-drawable:$gifVersion"
 
@@ -196,6 +198,12 @@ buildscript {
         walletConnectWalletDep = "com.walletconnect:web3wallet:$walletConnectWalletVersion"
 
         canonizationJsonDep = "io.github.erdtman:java-json-canonicalization:1.1"
+
+        firebaseBomDep = "com.google.firebase:firebase-bom:$firebaseBomVersion"
+        firestoreDep = "com.google.firebase:firebase-firestore"
+        firebaseCloudMessagingDep = "com.google.firebase:firebase-messaging"
+
+        kotlinReflect = "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     }
 
     repositories {
@@ -208,6 +216,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'org.mozilla.rust-android-gradle:plugin:0.9.3'
         classpath "com.google.firebase:firebase-appdistribution-gradle:$firebaseAppDistrVersion"
         classpath "com.github.triplet.gradle:play-publisher:$playPublisherVersion"
     }
@@ -255,8 +264,10 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
     args "-F", "$project.rootDir/**/src/main/**/*.kt"
     args "--android"
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 }
 
 task runTest(type: GradleBuild) {
